{
  "version": 4,
  "terraform_version": "0.12.14",
  "serial": 512,
  "lineage": "f53b15a0-74ff-4498-bc02-5ddae042822c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-025bb68ded12cbca4",
            "owner_id": "006587054012",
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "vpc_id": "vpc-028109fdb58a5de7f"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06f8dbf553c856f67",
            "owner_id": "006587054012",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-025bb68ded12cbca4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-028109fdb58a5de7f"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b815f8925ced04d",
            "route_table_id": "rtb-06f8dbf553c856f67",
            "subnet_id": "subnet-02380c98d5ba89984"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7ecae4852834313",
            "route_table_id": "rtb-06f8dbf553c856f67",
            "subnet_id": "subnet-0f837e06ddc78738e"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:006587054012:security-group/sg-0e6b20ea1cee5a0ba",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6b20ea1cee5a0ba",
            "ingress": [],
            "name": "terraform-eks-demo-cluster",
            "name_prefix": null,
            "owner_id": "006587054012",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-028109fdb58a5de7f"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-workstation-http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "167.61.26.6/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2996946982",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e6b20ea1cee5a0ba",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.demo-cluster",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:006587054012:subnet/subnet-02380c98d5ba89984",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-02380c98d5ba89984",
            "map_public_ip_on_launch": false,
            "owner_id": "006587054012",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/var.cluster-name": "shared"
            },
            "vpc_id": "vpc-028109fdb58a5de7f"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:006587054012:subnet/subnet-0f837e06ddc78738e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f837e06ddc78738e",
            "map_public_ip_on_launch": false,
            "owner_id": "006587054012",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/var.cluster-name": "shared"
            },
            "vpc_id": "vpc-028109fdb58a5de7f"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:006587054012:vpc/vpc-028109fdb58a5de7f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-081226f3940ae7dc7",
            "default_route_table_id": "rtb-087f1d03b7c3499b7",
            "default_security_group_id": "sg-0947e70cc36bd1753",
            "dhcp_options_id": "dopt-671c9d1f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-028109fdb58a5de7f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-087f1d03b7c3499b7",
            "owner_id": "006587054012",
            "tags": {
              "Name": "terraform-kube-eks",
              "kubernetes.io/cluster/var.cluster-name": "shared"
            }
          }
        }
      ]
    }
  ]
}